fix: home desktop header not hidding on mobile view

--- a/styles/header.css
+++ b/styles/header.css
@@ -68,6 +68,7 @@
    }
 
    .mobile-profile-btn {
+      display: none;
       width: 32px;
       height: 32px;
       border-radius: 100%;
